[tool.poetry]
name = "api"
version = "0.1.0"
description = "Maven Monolith API"
authors = ["Maven Engineering <engineering@mavenclinic.com>"]
packages = [{include = "../api"}]

[tool.poetry.scripts]
db = "api_console:db"
dev = "api_console:dev"
flagr = "api_console:flagr"
mmono = "mmono:main"

[tool.poetry.dependencies]
# - * - Web API Dependencies - * - #
python = "^3.8"
Flask = "^1.1.2"
Flask-Admin = "^1.6.1"
Flask-Login = "^0.4.1"
Flask-PageDown = "^0.4.0"
Flask-Principal = "^0.4.0"
Flask-RESTful = "^0.3.7"
httpproblem = "^0.2.0"
simplejson = "^3.16.0"
auth0-python = "^4.3.0"
pyopenssl = "^23"
email-validator = "^2.0.0.post2"
wtforms = "3.0.0"
certifi = "2023.7.22"

[tool.poetry.group.server.dependencies]
# - * - Deployment Server Dependencies - * - #
gunicorn = "^20.1.0"
gevent = "^22.10.2"

[tool.poetry.group.database.dependencies]
# - * - Database Dependencies - * - #
alembic = "^1.10.4"
Flask-SQLAlchemy = "^2.4.1"
# TODO: migrate to mysqlclient. Should be a drop-in, but will require a Terraform apply.
#   mysqlclient is a stable, dbapi-compliant wrapper around MySQL's C connector.
pymysql = "^0.10.1"
# Numerous breaking changes.
sqlalchemy = "<1.4"

[tool.poetry.group.services.dependencies]
# - * - Services Dependencies - * - #
grpcio-tools = "^1.32.0"
grpclib = "^0.4.1"
oauth2client = "^4.1.3"
otpauth = "^1.0.1"
python3-saml = "^1.9.0"
qrcode = { version = "^6.1", extras = ["pil"] }
redis = "^4.5.5"
redset = "^0.5.1"
rq = "1.15.1"
rq-dashboard = "^0.6.1"
pyjwt = "^2.0.0"

[tool.poetry.group.integrations.dependencies]
# - * - Integrations Dependencies - * - #
authy = "^2.2.6"
apns-clerk = "^0.2.0"
contentful = "^1.13.1"
elastic-enterprise-search = "^7.10.0b1"
mailchimp = "^2.0.9"
opentok = "^3.1.0"
stripe = "^1.79.1"
twilio = "^7.14.2"
zenpy = "^2.0.22"

[tool.poetry.group.instrumentation.dependencies]
# - * - Instrumentation Dependencies - * - #
datadog = "^0.46.0"
ddtrace = "0.54.1"
structlog = "^20.1.0"

[tool.poetry.group.utilities.dependencies]
# - * - General Utililities - * - #
cached-property = "^1.5.1"
dateparser = "^1.0.0"
icalendar = "^4.0.1"
iso3166 = "^1.0"
json-merge-patch = "^0.2"
marshmallow = "^3.2.2"
marshmallow-v1 = {path = "wheelhouse/marshmallow_v1"}
misaka = "^2.1.1"
phonenumbers = "^8.9.10"
pycryptodome = "^3.8.2"
python-magic = "^0.4.15"
python-slugify = "^1.2.5"
snowflake = {path = "wheelhouse/snowflake-1.0.0-py3-none-any.whl"}
zxcvbn = "4.4.28"
chardet = "^4.0.0"
pycountry = "^20.7.3"
flagr = "^1.1.10"
paramiko = "^2.11.0"
inflection = "^0.5.1"
luhn = "^0.2.0"
pyyaml = "^6.0.1"
typing-extensions = "^4.5.0"

[tool.poetry.group.opencensus.dependencies]
opencensus-ext-flask = "^0.7.3"
opencensus-ext-google-cloud-clientlibs = "^0.1.2"
opencensus-ext-sqlalchemy = "^0.1.2"
opencensus-ext-stackdriver = "^0.7.2"

[tool.poetry.group.google.dependencies]
google-cloud-bigquery = "^1.20.0"
google-cloud-kms = "^2.2.0"
google-cloud-pubsub = "^2.0.0"
google-cloud-storage = "^1.20.0"
google-api-python-client = "^2.17.0"
google-cloud-error-reporting = "^1.0.0"
google-cloud-recaptcha-enterprise = "^1.4.1"

# These dependencies are used by the dev shell
[tool.poetry.group.shell.dependencies]
ipython = "^8.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-split = "^0.8"
coverage = "^7"
unittest-xml-reporting = "^3"
factory-boy = "^3"
freezegun = "^1"

[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
flake8-gl-codeclimate = "^0.1.6"
safety = "^2.3.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.12.1"
colorama = "^0.4.4"
ipdb = "^0.13.9"
jinja2-cli = "^0.7.0"
python-dotenv = "^0.20.0"
black = "^22.8.0"
flask-debugtoolbar = "^0.13.1"

[tool.poetry.group.temporary.dependencies]
# These three are specific to the webflow -> contentful migration and are
# intended to be temporary
beautifulsoup4 = "^4.11.1"
markdownify = "^0.11.6"
contentful_management = "^2.11.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88
target_version = ["py38"]
extend-exclude = '''
/.*(maven_schemas|schemas/io/snapshot\.py|wheelhouse).*
'''
